--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="d-flex flex-column h-100">
 	<div class="wrapper">
-		<header class="border-bottom">
+		<header>
 			<div class="container">
 				<div class="row no-gutters align-items-center">
 					<div class="col-xl-5 mb-3 mb-xl-0">
@@ -22,8 +22,8 @@
 					</div>
 					<div class="col-md mb-3 mb-md-0">
 						<div class="row no-gutters align-items-center text-center text-sm-left">
-							<div class="col-sm-6 phone"><span class="mr-1"><img src="img/phone.png" alt="phone"></span><a href="78123181858">+7 (812) 318-18-58</a></div>
-							<div class="col-sm-6 d-sm-flex justify-content-sm-end email"><span class="mr-2"><img src="img/mail.png" alt="email"></span><a href="maito:info@aoepsilon.ru">info@aoepsilon.ru</a></div>
+							<div class="col-sm-6 phone"><span class="mr-1"><img src="img/svg/phone.svg" alt="phone"></span><a href="tel:78123181858">+7 (812) 318-18-58</a></div>
+							<div class="col-sm-6 d-sm-flex justify-content-sm-end email"><span class="mr-2"><img src="img/svg/mail.svg" alt="email"></span><a href="maito:info@aoepsilon.ru">info@aoepsilon.ru</a></div>
 						</div>
 					</div>
 					<div class="col-md">
@@ -32,8 +32,8 @@
 								<a class="btn btn-secondary" href="#" role="button">Заказать звонок</a>
 							</div>
 							<div class="col-sm-6 col-md-4 d-sm-flex justify-content-sm-end text-center social">
-								<a href="#" target="_blank"><img class="mr-2" src="img/vk.png" alt="vk"></a>
-								<a href="#" target="_blank"><img src="img/tg.png" alt="tg"></a>
+								<a href="#" target="_blank"><img class="mr-2" src="img/svg/vk.svg" alt="vk"></a>
+								<a href="#" target="_blank"><img src="img/svg/tg.svg" alt="tg"></a>
 							</div>
 						</div>
 					</div>
@@ -100,7 +100,63 @@
 				</div>
 			</div>
 		</main>
+
+		<div class="bottom border-bottom border-top py-5">
+			<div class="container">
+				<div class="row">
+					<div class="col bottom-1">
+						<h3 class="base mb-4">Информация о компании</h3>
+						<p>АО «Эпсилон» является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы
+						(ЭКБ) производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
+					</div>
+					<div class="col bottom-2"><h3 class="base mb-4">Контактная информация</h3>
+						<div class="d-flex flex-column">
+							<div class="phone">
+								<span class="mr-1"><img src="img/svg/phone.svg" alt="phone"></span>
+								<a href="tel:78123181858">+7 (812) 318-18-58</a>
+							</div>
+							<div class="email">
+								<span class="mr-2"><img src="img/svg/mail.svg" alt="email"></span>
+								<a href="maito:info@aoepsilon.ru">info@aoepsilon.ru</a>
+							</div>
+							<div class="address">
+								<span class="mr-2"><img src="img/svg/adress.svg" alt="address"></span>
+								<span>Санкт-Петербург, пр-т Добролюбова, 19</span>
+							</div>
+						</div>
+					</div>
+					<div class="col bottom-3">
+						<div class="row no-gutters align-items-center mb-3">
+							<div class="col-sm-6 col-md-8 d-sm-flex justify-content-md-end mb-3 mb-sm-0 text-center">
+								<a class="btn btn-secondary" href="#" role="button">Заказать звонок</a>
+							</div>
+							<div class="col-sm-6 col-md-4 d-sm-flex justify-content-sm-end text-center social">
+								<a href="#" target="_blank"><img class="mr-2" src="img/svg/vk.svg" alt="vk"></a>
+								<a href="#" target="_blank"><img src="img/svg/tg.svg" alt="tg"></a>
+							</div>
+						</div>
+						<div class="row no-gutters align-items-center">
+							<div class="col-sm-6">
+								<ul class="list-unstyled">
+									<li><a href="#">СВЧ-компоненты</a></li>
+									<li><a href="#">Цифровые микросхемы</a></li>
+									<li><a href="#">Аналоговые микросхемы</a></li>
+								</ul>
+							</div>
+							<div class="col-sm-6">
+								<ul class="list-unstyled">
+									<li><a href="#">Пассивные компоненты</a></li>
+									<li><a href="#">Электромеханические<br>компоненты</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
+	</div>
+
 	<footer class="footer mt-auto py-3">
 		<div class="container">
 			<span class="text-muted">Эпсилон © 2023</span>
