--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="row no-gutters align-items-center">
 					<div class="col-xl-5 mb-3 mb-xl-0">
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
-							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/logo.png" alt="Эпсилон логотип"></a></div>
+							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg" alt="Эпсилон логотип"></a></div>
 							<div class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</div>
 						</div>
 					</div>
@@ -29,7 +29,7 @@
 					<div class="col-md">
 						<div class="row no-gutters align-items-center">
 							<div class="col-sm-6 col-md-8 d-sm-flex justify-content-md-end mb-3 mb-sm-0 text-center">
-								<a class="btn btn-secondary" href="#" role="button">Заказать звонок</a>
+								<a class="btn btn-secondary" href="#" role="button" data-toggle="modal" data-target="#callModal">Заказать звонок</a>
 							</div>
 							<div class="col-sm-6 col-md-4 d-sm-flex justify-content-sm-end text-center social">
 								<a href="#" target="_blank"><img class="mr-2" src="img/svg/vk.svg" alt="vk"></a>
@@ -78,7 +78,7 @@
 						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
-						<input class="form-control" type="text" placeholder="Поиск..." aria-label="Search">
+						<input class="form-control" type="search" placeholder="Поиск..." aria-label="Search">
 					</form>
 				</div>
 			</div>
@@ -101,15 +101,15 @@
 			</div>
 		</main>
 
-		<div class="bottom border-bottom border-top py-5">
+		<div class="bottom border-bottom border-top py-4">
 			<div class="container">
 				<div class="row">
-					<div class="col bottom-1">
-						<h3 class="base mb-4">Информация о компании</h3>
+					<div class="col-lg bottom-1">
+						<h3 class="base mt-2 mb-4">Информация о компании</h3>
 						<p>АО «Эпсилон» является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы
 						(ЭКБ) производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
 					</div>
-					<div class="col bottom-2"><h3 class="base mb-4">Контактная информация</h3>
+					<div class="col-md bottom-2 mb-4 mb-md-0"><h3 class="base mt-2 mb-4">Контактная информация</h3>
 						<div class="d-flex flex-column">
 							<div class="phone">
 								<span class="mr-1"><img src="img/svg/phone.svg" alt="phone"></span>
@@ -125,28 +125,28 @@
 							</div>
 						</div>
 					</div>
-					<div class="col bottom-3">
+					<div class="col-md bottom-3">
 						<div class="row no-gutters align-items-center mb-3">
-							<div class="col-sm-6 col-md-8 d-sm-flex justify-content-md-end mb-3 mb-sm-0 text-center">
-								<a class="btn btn-secondary" href="#" role="button">Заказать звонок</a>
-							</div>
-							<div class="col-sm-6 col-md-4 d-sm-flex justify-content-sm-end text-center social">
+							<div class="col-auto col-xl-6 d-sm-flex justify-content-sm-end text-center pr-3 social">
 								<a href="#" target="_blank"><img class="mr-2" src="img/svg/vk.svg" alt="vk"></a>
 								<a href="#" target="_blank"><img src="img/svg/tg.svg" alt="tg"></a>
 							</div>
+							<div class="col-auto col-xl-6 d-sm-flex justify-content-md-end mb-3 mb-sm-0 text-center">
+								<a class="btn btn-secondary" href="#" role="button" data-toggle="modal" data-target="#callModal">Заказать звонок</a>
+							</div>
 						</div>
 						<div class="row no-gutters align-items-center">
-							<div class="col-sm-6">
-								<ul class="list-unstyled">
+							<div class="col-sm-7">
+								<ul class="list-unstyled eps-list">
 									<li><a href="#">СВЧ-компоненты</a></li>
 									<li><a href="#">Цифровые микросхемы</a></li>
 									<li><a href="#">Аналоговые микросхемы</a></li>
 								</ul>
 							</div>
-							<div class="col-sm-6">
-								<ul class="list-unstyled">
+							<div class="col-sm-5">
+								<ul class="list-unstyled eps-list">
 									<li><a href="#">Пассивные компоненты</a></li>
-									<li><a href="#">Электромеханические<br>компоненты</a></li>
+									<li><a href="#">Электромеханические компоненты</a></li>
 								</ul>
 							</div>
 						</div>
@@ -157,11 +157,40 @@
 
 	</div>
 
-	<footer class="footer mt-auto py-3">
+	<footer class="footer py-4">
 		<div class="container">
 			<span class="text-muted">Эпсилон © 2023</span>
 		</div>
 	</footer>
+
+	<!-- Modal window -->
+	<div class="modal fade" id="callModal" tabindex="-1" aria-labelledby="callModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="callModalLabel">Заказать звонок</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<label class="col-form-label">Ваше имя:</label>
+							<input type="text" class="form-control">
+						</div>
+						<div class="form-group">
+							<label class="col-form-label">Ваш номер телефона:</label>
+							<input type="tel" class="form-control">
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="submit" class="btn btn-primary">Отправить сообщение</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
