исправил ошибки в bottom и в сендвич-меню

--- a/index.html
+++ b/index.html
@@ -126,24 +126,24 @@
 						</div>
 					</div>
 					<div class="col-md bottom-3">
-						<div class="row no-gutters align-items-center mb-3">
-							<div class="col-auto col-xl-6 d-sm-flex justify-content-sm-end text-center pr-3 social">
+						<div class="row no-gutters mb-3">
+							<div class="col-auto col-md-5 col-xl-6 d-sm-flex justify-content-sm-end text-center pr-3 social">
 								<a href="#" target="_blank"><img class="mr-2" src="img/svg/vk.svg" alt="vk"></a>
 								<a href="#" target="_blank"><img src="img/svg/tg.svg" alt="tg"></a>
 							</div>
-							<div class="col-auto col-xl-6 d-sm-flex justify-content-md-end mb-3 mb-sm-0 text-center">
+							<div class="col-auto col-md-7 col-xl-6 d-sm-flex justify-content-md-end text-center">
 								<a class="btn btn-secondary" href="#" role="button" data-toggle="modal" data-target="#callModal">Заказать звонок</a>
 							</div>
 						</div>
-						<div class="row no-gutters align-items-center">
-							<div class="col-sm-7">
+						<div class="row no-gutters">
+							<div class="col-12 col-md-6 col-xl-7 pr-sm-2">
 								<ul class="list-unstyled eps-list">
 									<li><a href="#">СВЧ-компоненты</a></li>
 									<li><a href="#">Цифровые микросхемы</a></li>
 									<li><a href="#">Аналоговые микросхемы</a></li>
 								</ul>
 							</div>
-							<div class="col-sm-5">
+							<div class="col-12 col-md-6 col-xl-5">
 								<ul class="list-unstyled eps-list">
 									<li><a href="#">Пассивные компоненты</a></li>
 									<li><a href="#">Электромеханические компоненты</a></li>
