--- a/index.html
+++ b/index.html
@@ -84,6 +84,81 @@
 			</div>
 		</nav>
 
+		<div class="slider py-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-4">
+						<ul>
+							<li><a href="#">СВЧ-компоненты</a></li>
+							<li><a href="#">Цифровые микросхемы</a></li>
+							<li><a href="#">Аналоговые микросхемы</a></li>
+							<li><a href="#">Пассивные компоненты</a></li>
+							<li><a href="#">Электромеханические компоненты</a></li>
+							<li><a href="#">Кварцевые генераторы и резонаторы</a></li>
+							<li><a href="#">Оптоэлектронные компоненты</a></li>
+							<li><a href="#">Вторичные источники питания</a></li>
+						</ul>
+					</div>
+					<div class="col-8">
+						<div class="d-flex flex-column">
+							<div class="slider-row mb-5">
+								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+									<ol class="carousel-indicators">
+										<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+										<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+										<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+									</ol>
+									<div class="carousel-inner">
+										<div class="carousel-item active">
+											<svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+												xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Первый слайд"
+												preserveAspectRatio="xMidYMid slice" focusable="false">
+												<title>Placeholder</title>
+												<rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Первый слайд</text>
+											</svg>
+										</div>
+										<div class="carousel-item">
+											<svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+												xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Первый слайд"
+												preserveAspectRatio="xMidYMid slice" focusable="false">
+												<title>Placeholder</title>
+												<rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Первый слайд</text>
+											</svg>
+										</div>
+										<div class="carousel-item">
+											<svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+												xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Первый слайд"
+												preserveAspectRatio="xMidYMid slice" focusable="false">
+												<title>Placeholder</title>
+												<rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Первый слайд</text>
+											</svg>
+										</div>
+									</div>
+									<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+										<span class="sr-only">Предыдущий</span>
+									</a>
+									<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+										<span class="carousel-control-next-icon" aria-hidden="true"></span>
+										<span class="sr-only">Следующий</span>
+									</a>
+								</div>
+							</div>
+							<div class="d-flex no-gutters partners">
+								<div class="col-sm"><img src="img/partners/jscl_logo_615.png" alt=""></div>
+								<div class="col-sm"><img src="img/partners/fudan_logo_612.png" alt=""></div>
+								<div class="col-sm"><img src="img/partners/orbita_aerospace_logo_618.png" alt=""></div>
+								<div class="col-sm"><img src="img/partners/omicron_logo_v1_colour_613.png" alt=""></div>
+								<div class="col-sm"><img src="img/partners/hiwafer_logo_614.png" alt=""></div>
+								<div class="col-sm"><img src="img/partners/neditek_logo_v5_617.png" alt=""></div>
+								<div class="col-sm"><img src="img/partners/metda_logo_v1_616.png" alt=""></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<main role="main" class="my-5">
 			<div class="container jumbotron">
 				<div class="col-sm-8 mx-auto">
