--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 		<div class="slider py-5">
 			<div class="container">
 				<div class="row">
-					<div class="col-4">
-						<ul>
-							<li><a href="#">СВЧ-компоненты</a></li>
+					<div class="col-3">
+						<ul class="list-unstyled">
+							<li class="active"><a href="#">СВЧ-компоненты</a></li>
 							<li><a href="#">Цифровые микросхемы</a></li>
 							<li><a href="#">Аналоговые микросхемы</a></li>
 							<li><a href="#">Пассивные компоненты</a></li>
@@ -99,59 +99,49 @@
 							<li><a href="#">Вторичные источники питания</a></li>
 						</ul>
 					</div>
-					<div class="col-8">
+					<div class="col-9">
 						<div class="d-flex flex-column">
-							<div class="slider-row mb-5">
-								<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<div class="slider-self mb-5">
+								<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
 									<ol class="carousel-indicators">
-										<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-										<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-										<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+										<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+										<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+										<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 									</ol>
 									<div class="carousel-inner">
 										<div class="carousel-item active">
-											<svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-												xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Первый слайд"
-												preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Первый слайд</text>
-											</svg>
+											<img src="img/slide-1.png" class="d-block w-100" alt="Поставка широкой номенклатуры высоконадежных электронных компонентов">
+											<div class="carousel-caption d-none d-md-block">
+												<h2>Поставка широкой<br>номенклатуры<br>высоконадежных<br>электронных компонентов</h2>
+												<p>от ведущих Китайских заводов и<br>институтов на самых выгодных<br>условиях.</p>
+											</div>
 										</div>
 										<div class="carousel-item">
-											<svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-												xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Первый слайд"
-												preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Первый слайд</text>
-											</svg>
+											<img src="img/slide-1.png" class="d-block w-100" alt="Поставка широкой номенклатуры высоконадежных электронных компонентов">
+											<div class="carousel-caption d-none d-md-block">
+												<h2>Поставка широкой<br>номенклатуры<br>высоконадежных<br>электронных компонентов</h2>
+												<p>от ведущих Китайских заводов и<br>институтов на самых выгодных<br>условиях.</p>
+											</div>
 										</div>
 										<div class="carousel-item">
-											<svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-												xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Первый слайд"
-												preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Первый слайд</text>
-											</svg>
+											<img src="img/slide-1.png" class="d-block w-100" alt="Поставка широкой номенклатуры высоконадежных электронных компонентов">
+											<div class="carousel-caption d-none d-md-block">
+												<h2>Поставка широкой<br>номенклатуры<br>высоконадежных<br>электронных компонентов</h2>
+												<p>от ведущих Китайских заводов и<br>институтов на самых выгодных<br>условиях.</p>
+											</div>
 										</div>
 									</div>
-									<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-										<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-										<span class="sr-only">Предыдущий</span>
-									</a>
-									<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-										<span class="carousel-control-next-icon" aria-hidden="true"></span>
-										<span class="sr-only">Следующий</span>
-									</a>
 								</div>
 							</div>
+							<div class="tab-partners"><h3>Производители</h3></div>
 							<div class="d-flex no-gutters partners">
-								<div class="col-sm"><img src="img/partners/jscl_logo_615.png" alt=""></div>
-								<div class="col-sm"><img src="img/partners/fudan_logo_612.png" alt=""></div>
-								<div class="col-sm"><img src="img/partners/orbita_aerospace_logo_618.png" alt=""></div>
-								<div class="col-sm"><img src="img/partners/omicron_logo_v1_colour_613.png" alt=""></div>
-								<div class="col-sm"><img src="img/partners/hiwafer_logo_614.png" alt=""></div>
-								<div class="col-sm"><img src="img/partners/neditek_logo_v5_617.png" alt=""></div>
-								<div class="col-sm"><img src="img/partners/metda_logo_v1_616.png" alt=""></div>
+								<img src="img/partners/jscl_logo_615.png" alt="jscl">
+								<img src="img/partners/fudan_logo_612.png" alt="fudan">
+								<img src="img/partners/orbita_aerospace_logo_618.png" alt="orbita_aerospace">
+								<img src="img/partners/omicron_logo_v1_colour_613.png" alt="omicron">
+								<img src="img/partners/hiwafer_logo_614.png" alt="hiwafer">
+								<img src="img/partners/neditek_logo_v5_617.png" alt="neditek">
+								<img src="img/partners/metda_logo_v1_616.png" alt="metda">
 							</div>
 						</div>
 					</div>
