закончил блок левое меню и слайдер

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 			</div>
 		</nav>
 
-		<div class="slider py-5">
+		<div class="product-slider py-5">
 			<div class="container">
 				<div class="row">
-					<div class="col-3">
-						<ul class="list-unstyled">
+					<div class="col-lg-3">
+						<ul class="product-menu list-unstyled">
 							<li class="active"><a href="#">СВЧ-компоненты</a></li>
 							<li><a href="#">Цифровые микросхемы</a></li>
 							<li><a href="#">Аналоговые микросхемы</a></li>
@@ -99,8 +99,8 @@
 							<li><a href="#">Вторичные источники питания</a></li>
 						</ul>
 					</div>
-					<div class="col-9">
-						<div class="d-flex flex-column">
+					<div class="col-lg-9">
+						<div class="d-none d-md-flex flex-column">
 							<div class="slider-self mb-5">
 								<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
 									<ol class="carousel-indicators">
