начал разментку main левая колонка

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 			</div>
 		</nav>
 
-		<div class="product-slider py-5">
+		<section class="product-slider py-5">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3">
+					<div class="col-lg-3 mb-md-5 mb-lg-0">
 						<ul class="product-menu list-unstyled">
 							<li class="active"><a href="#">СВЧ-компоненты</a></li>
 							<li><a href="#">Цифровые микросхемы</a></li>
@@ -147,26 +147,31 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<main role="main" class="my-5">
-			<div class="container jumbotron">
-				<div class="col-sm-8 mx-auto">
-					<h1>Navbar examples</h1>
-					<p>This example is a quick exercise to illustrate how the navbar and its contents work. Some navbars extend the
-						width of the viewport, others are confined within a <code>.container</code>. For positioning of navbars,
-						checkout the <a href="/docs/4.6/examples/navbar-static/">top</a> and <a
-							href="/docs/4.6/examples/navbar-fixed/">fixed top</a> examples.</p>
-					<p>At the smallest breakpoint, the collapse plugin is used to hide the links and show a menu button to toggle
-						the collapsed content.</p>
-					<p>
-						<a class="btn btn-primary" href="/docs/4.6/components/navbar/" role="button">View navbar docs »</a>
-					</p>
+		<main role="main" class="main-content py-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-7">
+						<h2 class="base mt-2 mb-4">АО Эпсилон</h2>
+						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы (ЭКБ)
+						производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
+						<p>Наша компания имеет многолетние партнерские отношения с более чем 15-ю заводами Китайской аэрокосмической
+						научно-технической корпорации (CASC), более чем 40-а заводами Китайской корпорации электронных технологий (CETC) и более
+						20-ю частными предприятиями-изготовителями ЭКБ космического, военного и индустриального уровня качества.</p>
+						<p>Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие более чем 10-летним опытом
+						работы.</p>
+						<p>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских предприятий в ЭКБ,
+						предложению технических решений и осуществлению технической поддержки.</p>
+					</div>
+					<div class="col-5">
+					1111
+					</div>
 				</div>
 			</div>
 		</main>
 
-		<div class="bottom border-bottom border-top py-4">
+		<section class="bottom border-bottom border-top py-4">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg bottom-1">
@@ -218,7 +223,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 
 	</div>
 
