--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 						<p>Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие более чем 10-летним опытом
 						работы.</p>
 						<p>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских предприятий в ЭКБ,
-						предложению технических решений и осуществлению технической поддержки. </p>
+						предложению технических решений и осуществлению технической поддержки.</p>
 					</div>
 					<div class="col-5">
-					1111
+						&nbsp;
 					</div>
 				</div>
 			</div>
