--- a/index.html
+++ b/index.html
@@ -151,21 +151,46 @@
 
 		<main role="main" class="main-content py-5">
 			<div class="container">
-				<div class="row">
+				<div class="row home-page">
 					<div class="col-7">
-						<h2 class="base mt-2 mb-4">АО Эпсилон</h2>
+						<h2 class="base mt-3 mb-5">АО Эпсилон</h2>
 						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы (ЭКБ)
 						производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
-						<p>Наша компания имеет многолетние партнерские отношения с более чем 15-ю заводами Китайской аэрокосмической
-						научно-технической корпорации (CASC), более чем 40-а заводами Китайской корпорации электронных технологий (CETC) и более
-						20-ю частными предприятиями-изготовителями ЭКБ космического, военного и индустриального уровня качества.</p>
-						<p>Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие более чем 10-летним опытом
-						работы.</p>
-						<p>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских предприятий в ЭКБ,
-						предложению технических решений и осуществлению технической поддержки.</p>
 					</div>
 					<div class="col-5">
 						&nbsp;
+					</div>
+					<div class="w-100"></div>
+					<div class="col-7">
+						<p>Наша компания имеет многолетние партнерские отношения с более чем 15-ю заводами Китайской аэрокосмической
+							научно-технической корпорации (CASC), более чем 40-а заводами Китайской корпорации электронных технологий (CETC) и более 
+							20-ю частными предприятиями-изготовителями ЭКБ космического, военного и индустриального уровня качества.</p>
+						<p>Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие более чем 10-летним
+							опытом работы.</p>
+						<p>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей Российских предприятий в
+							ЭКБ,
+							предложению технических решений и осуществлению технической поддержки.</p>
+					</div>
+					<div class="col-5">
+						<div class="row strengths">
+							<div class="col-6">
+								<h4 class="base-red">Техническая поддержка</h4>
+								<p>На всех этапах проектирования</p>
+							</div>
+							<div class="col-6">
+								<h4 class="base-red">Сертификаты</h4>
+								<p>Являемся квалифицированным поставщиком ЭКБ</p>
+							</div>
+							<div class="w-100"></div>
+							<div class="col-6">
+								<h4 class="base-red">Проведение сертификационных испытаний</h4>
+								<p>Элементной базы</p>
+							</div>
+							<div class="col-6">
+								<h4 class="base-red">Собственный склад</h4>
+								<p>Хранения продукции</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
