--- a/index.html
+++ b/index.html
@@ -196,7 +196,45 @@
 			</div>
 		</main>
 
-		<section class="bottom border-bottom border-top py-4">
+		<section class="subscribe py-5">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-4">
+						<h5 class="card-title">Нужна консультация<br>специалиста?</h5>
+					</div>
+					<div class="col-md-8">
+						<form class="form-inline justify-content-end">
+							<div class="form-group mr-2">
+								<label for="name-input" class="sr-only">Имя</label>
+								<input type="text" class="form-control" id="name-input" placeholder="Ваше имя">
+							</div>
+							<div class="form-group mr-2">
+								<label for="email-input" class="sr-only">Email адрес</label>
+								<input type="email" class="form-control" id="email-input" placeholder="E-mail">
+							</div>
+							<div class="form-group mr-2">
+								<label for="phone-input" class="sr-only">Телефон</label>
+								<input type="text" class="form-control" id="phone-input" placeholder="Телефон">
+							</div>
+							<button type="submit" class="btn btn-primary">Отправить</button>
+							<small>Нажимая на кнопку «Оставить заявку», вы соглашаетесь на обработку персональных данных в соответствии с
+								пользовательским соглашением</small>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="map">
+			<div class="row justify-content-center">
+				<div class="col-md-12">
+					<div class="embed-responsive h-475">
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="bottom border-bottom py-4">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg bottom-1">
