закончил блок main

--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
 		<main role="main" class="main-content py-5">
 			<div class="container">
 				<div class="row home-page">
-					<div class="col-7">
+					<div class="col-lg-6 col-xl-7">
 						<h2 class="base mt-3 mb-5">АО Эпсилон</h2>
 						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы (ЭКБ)
 						производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
 					</div>
-					<div class="col-5">
+					<div class="col-lg-6 col-xl-5">
 						&nbsp;
 					</div>
 					<div class="w-100"></div>
-					<div class="col-7">
+					<div class="col-md-5 col-xl-7">
 						<p>Наша компания имеет многолетние партнерские отношения с более чем 15-ю заводами Китайской аэрокосмической
 							научно-технической корпорации (CASC), более чем 40-а заводами Китайской корпорации электронных технологий (CETC) и более 
 							20-ю частными предприятиями-изготовителями ЭКБ космического, военного и индустриального уровня качества.</p>
@@ -171,24 +171,44 @@
 							ЭКБ,
 							предложению технических решений и осуществлению технической поддержки.</p>
 					</div>
-					<div class="col-5">
+					<div class="col-md-7 col-xl-5 mt-4 mt-md-0">
 						<div class="row strengths">
-							<div class="col-6">
-								<h4 class="base-red">Техническая поддержка</h4>
-								<p>На всех этапах проектирования</p>
+							<div class="col-sm-6">
+								<div class="d-flex">
+									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_305.png" alt="support"></span>
+									<div>
+										<h4 class="base-red">Техническая поддержка</h4>
+										<p>На всех этапах проектирования</p>
+									</div>
+								</div>
 							</div>
-							<div class="col-6">
-								<h4 class="base-red">Сертификаты</h4>
-								<p>Являемся квалифицированным поставщиком ЭКБ</p>
+							<div class="col-sm-6">
+								<div class="d-flex">
+									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_313.png" alt="support"></span>
+									<div>
+										<h4 class="base-red">Сертификаты</h4>
+										<p>Являемся квалифицированным поставщиком ЭКБ</p>
+									</div>
+								</div>
 							</div>
 							<div class="w-100"></div>
-							<div class="col-6">
-								<h4 class="base-red">Проведение сертификационных испытаний</h4>
-								<p>Элементной базы</p>
+							<div class="col-sm-6">
+								<div class="d-flex">
+									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_307.png" alt="support"></span>
+									<div>
+										<h4 class="base-red">Проведение сертификационных испытаний</h4>
+										<p>Элементной базы</p>
+									</div>
+								</div>
 							</div>
-							<div class="col-6">
-								<h4 class="base-red">Собственный склад</h4>
-								<p>Хранения продукции</p>
+							<div class="col-sm-6">
+								<div class="d-flex">
+									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_309.png" alt="support"></span>
+									<div>
+										<h4 class="base-red">Собственный склад</h4>
+										<p>Хранения продукции</p>
+									</div>
+								</div>								
 							</div>
 						</div>
 					</div>
@@ -225,14 +245,14 @@
 			</div>
 		</section>
 
-		<section class="map">
+		<!--<section class="map">
 			<div class="row justify-content-center">
 				<div class="col-md-12">
 					<div class="embed-responsive h-475">
 					</div>
 				</div>
 			</div>
-		</section>
+		</section>-->
 
 		<section class="bottom border-bottom py-4">
 			<div class="container">
