закончил вёрстку формы "консультация"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div class="col-xl-5 mb-3 mb-xl-0">
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
 							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg" alt="Эпсилон логотип"></a></div>
-							<div class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</div>
+							<h1 class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</h1>
 						</div>
 					</div>
 					<div class="col-md mb-3 mb-md-0">
@@ -177,7 +177,7 @@
 								<div class="d-flex">
 									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_305.png" alt="support"></span>
 									<div>
-										<h4 class="base-red">Техническая поддержка</h4>
+										<h3 class="base-red">Техническая поддержка</h3>
 										<p>На всех этапах проектирования</p>
 									</div>
 								</div>
@@ -186,7 +186,7 @@
 								<div class="d-flex">
 									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_313.png" alt="support"></span>
 									<div>
-										<h4 class="base-red">Сертификаты</h4>
+										<h3 class="base-red">Сертификаты</h3>
 										<p>Являемся квалифицированным поставщиком ЭКБ</p>
 									</div>
 								</div>
@@ -196,7 +196,7 @@
 								<div class="d-flex">
 									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_307.png" alt="support"></span>
 									<div>
-										<h4 class="base-red">Проведение сертификационных испытаний</h4>
+										<h3 class="base-red">Проведение сертификационных испытаний</h3>
 										<p>Элементной базы</p>
 									</div>
 								</div>
@@ -205,7 +205,7 @@
 								<div class="d-flex">
 									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_309.png" alt="support"></span>
 									<div>
-										<h4 class="base-red">Собственный склад</h4>
+										<h3 class="base-red">Собственный склад</h3>
 										<p>Хранения продукции</p>
 									</div>
 								</div>								
@@ -218,43 +218,47 @@
 
 		<section class="subscribe py-5">
 			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-4">
-						<h5 class="card-title">Нужна консультация<br>специалиста?</h5>
+				<div class="row justify-content-between pt-3 pt-md-5 pb-2">
+					<div class="col-md-3 pb-4 pb-md-0">
+						<h4 class="subscribe-title">Нужна консультация<br>специалиста?</h4>
 					</div>
-					<div class="col-md-8">
-						<form class="form-inline justify-content-end">
-							<div class="form-group mr-2">
+					<div class="col-md-9">
+						<form class="form-row justify-content-end subscribe-body">
+							<div class="form-group col-lg">
 								<label for="name-input" class="sr-only">Имя</label>
 								<input type="text" class="form-control" id="name-input" placeholder="Ваше имя">
 							</div>
-							<div class="form-group mr-2">
+							<div class="form-group col-lg">
 								<label for="email-input" class="sr-only">Email адрес</label>
 								<input type="email" class="form-control" id="email-input" placeholder="E-mail">
 							</div>
-							<div class="form-group mr-2">
+							<div class="form-group col-lg">
 								<label for="phone-input" class="sr-only">Телефон</label>
 								<input type="text" class="form-control" id="phone-input" placeholder="Телефон">
 							</div>
-							<button type="submit" class="btn btn-primary">Отправить</button>
-							<small>Нажимая на кнопку «Оставить заявку», вы соглашаетесь на обработку персональных данных в соответствии с
-								пользовательским соглашением</small>
+							<button type="submit" class="btn btn-secondary mr-2">Отправить</button>
 						</form>
+						<div class="row mt-4 mt-lg-0">
+							<div class="col-lg-5"></div>
+							<div class="col-lg-7">
+								<span class="small-conf">Нажимая на кнопку «Отправить», вы соглашаетесь на обработку персональных данных в соответствии с пользовательским соглашением!</span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<!--<section class="map">
+		<!--<div class="map">
 			<div class="row justify-content-center">
 				<div class="col-md-12">
 					<div class="embed-responsive h-475">
 					</div>
 				</div>
 			</div>
-		</section>-->
+		</div>-->
 
-		<section class="bottom border-bottom py-4">
+		<section class="bottom border-bottom pt-5 pb-4">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg bottom-1">
@@ -262,7 +266,8 @@
 						<p>АО «Эпсилон» является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы
 						(ЭКБ) производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
 					</div>
-					<div class="col-md bottom-2 mb-4 mb-md-0"><h3 class="base mt-2 mb-4">Контактная информация</h3>
+					<div class="col-md bottom-2 mb-4 mb-md-0">
+						<h3 class="base mt-2 mb-4">Контактная информация</h3>
 						<div class="d-flex flex-column">
 							<div class="phone">
 								<span class="mr-1"><img src="img/svg/phone.svg" alt="phone"></span>
