--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 			</div>
 		</main>
 
+		<section class="news py-5">
+
+		</section>
+
 		<section class="subscribe py-5">
 			<div class="container">
 				<div class="row justify-content-between pt-3 pt-md-5 pb-2">
@@ -226,15 +230,15 @@
 						<form class="form-row justify-content-end subscribe-body">
 							<div class="form-group col-lg">
 								<label for="name-input" class="sr-only">Имя</label>
-								<input type="text" class="form-control" id="name-input" placeholder="Ваше имя">
+								<input type="text" class="form-control" id="name-input" placeholder="Ваше имя *" required>
 							</div>
 							<div class="form-group col-lg">
 								<label for="email-input" class="sr-only">Email адрес</label>
-								<input type="email" class="form-control" id="email-input" placeholder="E-mail">
+								<input type="email" class="form-control" id="email-input" placeholder="E-mail *" required>
 							</div>
 							<div class="form-group col-lg">
 								<label for="phone-input" class="sr-only">Телефон</label>
-								<input type="text" class="form-control" id="phone-input" placeholder="Телефон">
+								<input type="text" class="form-control" id="phone-input" placeholder="Телефон *" required>
 							</div>
 							<button type="submit" class="btn btn-secondary mr-2">Отправить</button>
 						</form>
@@ -335,11 +339,11 @@
 					<form>
 						<div class="form-group">
 							<label class="col-form-label">Ваше имя:</label>
-							<input type="text" class="form-control">
+							<input type="text" class="form-control" required>
 						</div>
 						<div class="form-group">
 							<label class="col-form-label">Ваш номер телефона:</label>
-							<input type="tel" class="form-control">
+							<input type="tel" class="form-control" required>
 						</div>
 					</form>
 				</div>
