выравнивание блока Новости

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<!-- Slide-group-1 -->
 						<div class="carousel-item active">
 							<div class="row">
-								<div class="col">
+								<div class="col-lg pr-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -246,7 +246,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-lg px-2">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -265,7 +265,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-lg pl-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -289,7 +289,7 @@
 						<!-- Slide-group-2 -->
 						<div class="carousel-item">
 							<div class="row">
-								<div class="col">
+								<div class="col-lg pr-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -311,7 +311,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-lg px-2">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -331,7 +331,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-lg pl-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -357,7 +357,7 @@
 						<!-- Slide-group-3 -->
 						<div class="carousel-item">
 							<div class="row">
-								<div class="col">
+								<div class="col-lg pr-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -379,7 +379,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-lg px-2">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -399,7 +399,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col">
+								<div class="col-lg pl-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
