доделал блок Новости и поставил блок Карта

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body class="d-flex flex-column h-100">
 	<div class="wrapper">
+
+		<!-- Header Block -->
 		<header>
 			<div class="container">
 				<div class="row no-gutters align-items-center">
@@ -40,11 +42,11 @@
 				</div>
 			</div>
 		</header>
-	
+
+		<!-- NavBar Block -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07"
-					aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 		
@@ -84,6 +86,7 @@
 			</div>
 		</nav>
 
+		<!-- Slider & LeftMenu Block -->
 		<section class="product-slider py-5">
 			<div class="container">
 				<div class="row">
@@ -149,6 +152,7 @@
 			</div>
 		</section>
 
+		<!-- Main Block -->
 		<main role="main" class="main-content py-5">
 			<div class="container">
 				<div class="row home-page">
@@ -216,17 +220,18 @@
 			</div>
 		</main>
 
+		<!-- News Block -->
 		<section class="news py-5">
 			<div class="container">
-				<div class="d-flex mt-4 mb-5">
-				<h3 class="title-news">Новости</h3><span class="all-items"><a href="news.html">Все новости</a></span>
+				<div class="d-flex justify-content-center justify-content-lg-start mt-4 mb-5">
+					<h3 class="title-news">Новости</h3><span class="all-items"><a href="news.html">Все новости</a></span>
 				</div>
-				<div id="carouselExampleControls" class="carousel slide carousel-fade mb-5" data-ride="carousel" data-interval="false">
+				<div id="carouselExampleControls" class="carousel slide carousel-fade mb-3 mb-md-5" data-ride="carousel" data-interval="false">
 					<div class="carousel-inner">
 						<!-- Slide-group-1 -->
 						<div class="carousel-item active">
 							<div class="row">
-								<div class="col-lg pr-1">
+								<div class="col-lg pr-lg-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -246,7 +251,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg px-2">
+								<div class="col-lg px-lg-2">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -265,7 +270,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg pl-1">
+								<div class="col-lg pl-lg-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -289,7 +294,7 @@
 						<!-- Slide-group-2 -->
 						<div class="carousel-item">
 							<div class="row">
-								<div class="col-lg pr-1">
+								<div class="col-lg pr-lg-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -311,7 +316,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg px-2">
+								<div class="col-lg px-lg-2">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -331,7 +336,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg pl-1">
+								<div class="col-lg pl-lg-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -357,7 +362,7 @@
 						<!-- Slide-group-3 -->
 						<div class="carousel-item">
 							<div class="row">
-								<div class="col-lg pr-1">
+								<div class="col-lg pr-lg-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -367,7 +372,7 @@
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
-													<p class="card-text"><small class="text-dated">30 Февраля 2023</small></p>
+													<p class="card-text"><small class="text-dated">30 февраля 2023</small></p>
 													<h5 class="card-title">Расширение линейки изделий на основе технологии 3D для ответственных применений
 														производства компании XMTI:
 														интерфейсные модули LVDS.</h5>
@@ -379,7 +384,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg px-2">
+								<div class="col-lg px-lg-2">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -389,7 +394,7 @@
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
-													<p class="card-text"><small class="text-dated">30 Февраля 2023</small></p>
+													<p class="card-text"><small class="text-dated">30 февраля 2023</small></p>
 													<h5 class="card-title">Сравнительные испытания ПЛИС производства компаний Xilinx и BMTI</h5>
 													<p class="card-text">Сообщаем Вам, что заказчиком компании АО «Эпсилон» проведены сравнительные
 														испытания ПЛИС производства
@@ -399,7 +404,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-lg pl-1">
+								<div class="col-lg pl-lg-1">
 									<div class="card mb-3">
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
@@ -409,7 +414,7 @@
 											</div>
 											<div class="col-md-8">
 												<div class="card-body">
-													<p class="card-text"><small class="text-dated">30 Февраля 2023</small></p>
+													<p class="card-text"><small class="text-dated">30 февраля 2023</small></p>
 													<h5 class="card-title">Поставка ПЛИС Виртекса 5го поколения BQ5V от BMTI.</h5>
 													<p class="card-text">Спешим ответить нашим уважаемым читателям на часто задаваемый вопрос: "А
 														действительно ли вы можете
@@ -436,6 +441,7 @@
 			</div>
 		</section>
 
+		<!-- Subscribe block -->
 		<section class="subscribe py-5">
 			<div class="container">
 				<div class="row justify-content-between pt-3 pt-md-5 pb-2">
@@ -469,15 +475,40 @@
 			</div>
 		</section>
 
-		<!--<div class="map">
-			<div class="row justify-content-center">
-				<div class="col-md-12">
-					<div class="embed-responsive h-475">
-					</div>
-				</div>
-			</div>
-		</div>-->
+		<!-- Map block -->
+		<div class="map-eps">
+			<div style="width: auto;height: 450px" id="mapq8001z02"></div>
+			<script>function YandexReadyHandlerq8001z02() {
+					var map = new ymaps.Map("mapq8001z02", {
+						center: [59.9502170493248, 30.299697689967136],
+						zoom: 18,
+						controls: ["zoomControl", "typeSelector"],
+						type: "yandex#map"
+					}, {
+						suppressMapOpenBlock: true
+					});
+					map.behaviors.disable('scrollZoom');
+					map.geoObjects.add(new ymaps.GeoObject({
+						geometry: {
+							type: "Point",
+							coordinates: [59.95021839471684, 30.299686961131084],
+							hideIconOnBalloonOpen: false
+						},
+						properties: {
+							balloonContent: decodeURIComponent("%3Cp%3E%D0%90%D0%9E%20%D0%AD%D0%BF%D1%81%D0%B8%D0%BB%D0%BE%D0%BD%2C%20%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3%2C%20%D0%BF%D1%80-%D1%82%20%D0%94%D0%BE%D0%B1%D1%80%D0%BE%D0%BB%D1%8E%D0%B1%D0%BE%D0%B2%D0%B0%2C%2019%3C%2Fp%3E"),
+							iconCaption: decodeURIComponent("%D0%BF%D1%80-%D1%82%20%D0%94%D0%BE%D0%B1%D1%80%D0%BE%D0%BB%D1%8E%D0%B1%D0%BE%D0%B2%D0%B0%2C%2019"),
+							hintCaption: decodeURIComponent("%D0%BF%D1%80-%D1%82%20%D0%94%D0%BE%D0%B1%D1%80%D0%BE%D0%BB%D1%8E%D0%B1%D0%BE%D0%B2%D0%B0%2C%2019"),
+						}
+					}, {
+						preset: "islands#redDotIcon",
+					})
+					); return map;
+				}</script>
+			<script src="//api-maps.yandex.ru/2.1/?apikey=YOUR_API_KEY&lang=ru&onload=YandexReadyHandlerq8001z02"
+				type="text/javascript"></script>
+		</div>
 
+		<!-- Bottom block --> 
 		<section class="bottom border-bottom pt-5 pb-4">
 			<div class="container">
 				<div class="row">
@@ -535,6 +566,7 @@
 
 	</div>
 
+	<!-- Footer block -->
 	<footer class="footer py-4">
 		<div class="container">
 			<span class="text-muted">Эпсилон © 2023</span>
