--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-1.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-1.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -256,7 +256,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-2.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-2.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -275,7 +275,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-3.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-3.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -299,7 +299,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-1.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-1.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -321,7 +321,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-2.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-2.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -341,7 +341,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-3.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-3.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -389,7 +389,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-2.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-2.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
@@ -409,7 +409,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-3.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-3.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
