--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<a class="nav-link" href="#">Контакты</a>
 						</li>
 					</ul>
-					<form class="form-inline my-2 my-md-0">
+					<form class="d-none d-lg-flex form-inline my-2 my-md-0">
 						<input class="form-control" type="search" placeholder="Поиск..." aria-label="Search">
 					</form>
 				</div>
@@ -607,6 +607,6 @@
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
 		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-	<script src="js/bootstrap.min.js"></script>	
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
