--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Сайт компании Эпсилон">
+	<link rel="icon" href="img/svg/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<title>Epsilon</title>
@@ -59,14 +60,14 @@
 							<a class="nav-link" href="#">О компании</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true"
+							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown-none" aria-haspopup="true"
 								aria-expanded="false">Продукты</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
 								<a class="dropdown-item" href="#">Цифровые микросхемы</a>
-								<a class="dropdown-item" href="#">Аналоговые<br>микросхемы</a>
+								<a class="dropdown-item" href="#">Аналоговые микросхемы</a>
 								<a class="dropdown-item" href="#">Пассивные компоненты</a>
-								<a class="dropdown-item" href="#">Электромеханические<br>компоненты</a>
+								<a class="dropdown-item" href="#">Электромеханические компоненты</a>
 							</div>
 						</li>
 						<li class="nav-item">
