--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown-none" aria-haspopup="true"
-								aria-expanded="false">Продукты</a>
+								aria-expanded="false">Изделия</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
 								<a class="dropdown-item" href="#">Цифровые микросхемы</a>
@@ -368,7 +368,7 @@
 										<div class="row no-gutters align-items-center">
 											<div class="col-md-4">
 												<div class="card-body-img">
-													<img class="img-thumbnail" src="../img/img-card-1.png" alt="">
+													<img class="img-thumbnail" src="img/img-card-1.png" alt="">
 												</div>
 											</div>
 											<div class="col-md-8">
