--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 							</div>
 							<div class="tab-partners"><h3>Производители</h3></div>
 							<div class="d-flex no-gutters partners">
-								<img src="img/partners/jscl_logo_615.png" alt="jscl">
-								<img src="img/partners/fudan_logo_612.png" alt="fudan">
-								<img src="img/partners/orbita_aerospace_logo_618.png" alt="orbita_aerospace">
-								<img src="img/partners/omicron_logo_v1_colour_613.png" alt="omicron">
-								<img src="img/partners/hiwafer_logo_614.png" alt="hiwafer">
-								<img src="img/partners/neditek_logo_v5_617.png" alt="neditek">
-								<img src="img/partners/metda_logo_v1_616.png" alt="metda">
+								<a href="#"><img src="img/partners/jscl_logo_615.png" alt="jscl"></a>
+								<a href="#"><img src="img/partners/fudan_logo_612.png" alt="fudan"></a>
+								<a href="#"><img src="img/partners/orbita_aerospace_logo_618.png" alt="orbita_aerospace"></a>
+								<a href="#"><img src="img/partners/omicron_logo_v1_colour_613.png" alt="omicron"></a>
+								<a href="#"><img src="img/partners/hiwafer_logo_614.png" alt="hiwafer"></a>
+								<a href="#"><img src="img/partners/neditek_logo_v5_617.png" alt="neditek"></a>
+								<a href=""><img src="img/partners/metda_logo_v1_616.png" alt="metda"></a>
 							</div>
 						</div>
 					</div>
