--- a/index.html
+++ b/index.html
@@ -92,16 +92,53 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 mb-md-5 mb-lg-0">
-						<ul class="product-menu list-unstyled">
-							<li class="active"><a href="#">СВЧ-компоненты</a></li>
-							<li><a href="#">Цифровые микросхемы</a></li>
-							<li><a href="#">Аналоговые микросхемы</a></li>
-							<li><a href="#">Пассивные компоненты</a></li>
-							<li><a href="#">Электромеханические компоненты</a></li>
-							<li><a href="#">Кварцевые генераторы и резонаторы</a></li>
-							<li><a href="#">Оптоэлектронные компоненты</a></li>
-							<li><a href="#">Вторичные источники питания</a></li>
-						</ul>
+						<div class="product-menu">
+							<div class="dropright">
+								<div class="dropright-item parent active" role="button" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
+									<a href="#">СВЧ-компоненты</a>
+									<div class="dropdown-menu">
+										<a class="dropright-item-level1" href="#">METDA</a>
+										<a class="dropright-item-level1" href="#">Neditek</a>
+										<a class="dropright-item-level1" href="#">HiWafer</a>
+									</div>
+								</div>
+							</div>
+							<div class="dropright">
+								<div class="dropright-item parent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<a href="#">Цифровые микросхемы</a>
+									<div class="dropdown-menu">
+										<a class="dropdown-item" href="#">Пункт1</a>
+										<a class="dropdown-item" href="#">Пункт2</a>
+										<a class="dropdown-item" href="#">Пункт3</a>
+									</div>
+								</div>
+							</div>
+							<div class="dropright">
+								<div class="dropright-item parent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<a href="#">Аналоговые микросхемы</a>
+									<div class="dropdown-menu">
+										<a class="dropdown-item" href="#">Пункт1</a>
+										<a class="dropdown-item" href="#">Пункт2</a>
+										<a class="dropdown-item" href="#">Пункт3</a>
+									</div>
+								</div>
+							</div>
+							<div class="dropright-item" role="button" id="dropdownMenuLink4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="#">Пассивные компоненты</a>
+							</div>
+							<div class="dropright-item" role="button" id="dropdownMenuLink5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="#">Электромеханические компоненты</a>
+							</div>
+							<div class="dropright-item" role="button" id="dropdownMenuLink6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="#">Кварцевые генераторы и резонаторы</a>
+							</div>
+							<div class="dropright-item" role="button" id="dropdownMenuLink7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="#">Оптоэлектронные компоненты</a>
+							</div>
+							<div class="dropright-item" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="#">Вторичные источники питания</a>
+							</div>
+						</div>
 					</div>
 					<div class="col-lg-9">
 						<div class="d-none d-md-flex flex-column">
